<?xml version="1.0"?>
<package format="3">
  <name>grasp_pkg</name>
  <version>0.0.1</version>
  <description>Hardness judgment and gripper current control</description>
  <maintainer email="todo@todo.com">남상훈</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
