<?xml version="1.0"?>
<package format="3">
  <name>main_pkg</name>
  <version>0.0.1</version>
  <description>Main pipeline integration node</description>
  <maintainer email="todo@todo.com">심예영</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
