<?xml version="1.0"?>
<package format="3">
  <name>motion_pkg</name>
  <version>0.0.1</version>
  <description>MoveIt2 motion planning node</description>
  <maintainer email="todo@todo.com">임현찬</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
